--- a/test4style.css
+++ b/test4style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Aldrich", sans-serif;
   list-style: none;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 body {
   background: url("bg.png");
