--- a/test4style.css
+++ b/test4style.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
   font-family: "Aldrich", sans-serif;
   list-style: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 body {
