--- a/tabbed-menu/style2.css
+++ b/tabbed-menu/style2.css
@@ -17,6 +17,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto Condensed", serif;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 ul,
 ol,
