--- a/tabbed-menu/style2.css
+++ b/tabbed-menu/style2.css
@@ -31,7 +31,7 @@ body {
 
 body {
   background-color: var(--background-color);
-  padding: 1em;
+  padding: 10px;
   color: var(--text-color);
 }
 
